--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ isolated_build = true
 
 [gh-actions]
 python =
-    3.8: py38, flake8, mypy
+    3.8: py38, flake8
     3.9: py39
     3.10: py310
     3.11: py311
@@ -22,9 +22,3 @@ commands =
 basepython = python3.8
 deps = flake8
 commands = flake8 scrivid tests
-
-[testenv:mypy]
-basepython = python3.8
-deps =
-    -r{toxinidir}/requirements_dev.txt
-commands = mypy scrivid
