--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ packages = scrivid
 install_requires =
     Pillow>=9.3
     moviepy>=1
+    sortedcontainers>2
 python_requires = >=3.8
 zip_safe = no
 
