Updated tests for new video-making test results;

--- a/tox.ini
+++ b/tox.ini
@@ -16,9 +16,13 @@ setenv =
 deps =
     -r{toxinidir}/requirements_dev.txt
 commands =
-    pytest --basetemp={envtmpdir}
+    pytest --basetemp={envtmpdir} --skip-video-tests
 
 [testenv:flake8]
 basepython = python3.8
 deps = flake8
 commands = flake8 scrivid tests
+
+[testenv:py311]
+commands = 
+    pytest --basetemp={envtmpdir}
