--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,8 @@ requires = ["setuptools>=42.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.pytest.ini_options]
-faulthandler_timeout=20
+addopts = "--showlocals"
+faulthandler_timeout = 120
 testpaths = [
     "tests",
 ]
