--- a/setup.cfg
+++ b/setup.cfg
@@ -18,13 +18,13 @@ classifiers =
 packages = scrivid
 install_requires =
     Pillow>=9.3
-    av>=9
+    ffmpeg-python>=0.2.0
     sortedcontainers>2
 python_requires = >=3.8
 zip_safe = no
 
 [options.package_data]
-scripted_video = py.typed
+scrivid = py.typed
 
 [options.extras_require]
 testing =
