Trying to fix build crash resulting from ffmpeg-python building;

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ scrivid = py.typed
 [options.extras_require]
 testing =
     pytest>=6.0
-    av>=9.0
+    opencv-python>=4.8
     flake8>=3.9
     tox>=3.24
 
