--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,6 +13,8 @@ jobs:
         python-version: ['3.8', '3.9', '3.10', '3.11']
 
     steps:
+      - name: Print PATH
+        run: echo $PATH
       - uses: actions/checkout@v2
         # with: actions/checkout
       - name: Set up Python ${{ matrix.python-version }}
