Tried to add an additional build module in GitHub Actions to debug previous crash;

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,3 +30,23 @@ jobs:
         run: choco install ffmpeg --version=5.1.1 --elevated
       - name: Test with tox
         run: tox
+
+  artifact-inspection:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Archive Directory
+        run: tar czf directory-archive.tar.gz /scrivid/tests/samples/
+        working-directory: ${{ github.workspace }}
+      - name: Set Up Python 3.11
+        uses: actions/checkout@v4
+        with:
+          python-version: '3.11'
+      - name: Run Python Script
+        run: python -m tests/samples/notatruetest.py
+      - name: Save Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: directory-artifact
+          path: directory-archive.tar.gz
