--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,15 +36,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Archive Directory
-        run: tar czf directory-archive.tar.gz /scrivid/tests/samples/
-        working-directory: ${{ github.workspace }}
       - name: Set Up Python 3.11
         uses: actions/checkout@v4
         with:
           python-version: '3.11'
+      - name: Download Scrivid
+        run: 
+          python -m pip install --upgrade pip
+          pip install git+https://github.com/TNTMaster370/scrivid.git
       - name: Run Python Script
         run: python -m tests/samples/notatruetest.py
+      - name: Archive Directory
+        run: tar czf directory-archive.tar.gz /scrivid/tests/samples/
+        working-directory: ${{ github.workspace }}
       - name: Save Artifact
         uses: actions/upload-artifact@v3
         with:
