Fixed a long-standing typo in `setup.cfg`;

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = 0.1.0
 description = A Python library to create instructions for a generated video.
 author = TNTMaster370
 license = MIT
-license_file = LICENSE
+license_file = LICENSE.md
 platforms = win32
 classifiers =
     Programming Language :: Python :: 3
