--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Download Scrivid
         run: 
           python -m pip install --upgrade pip
-          pip install git+https://github.com/TNTMaster370/scrivid.git
+          pip install git+https://github.com/TNTMaster370/scrivid.git#egg=scrivid --editable
       - name: Run Python Script
         run: python -m tests/samples/notatruetest.py
       - name: Archive Directory
