--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,7 +43,9 @@ jobs:
       - name: Download Scrivid
         run: 
           python -m pip install --upgrade pip
-          pip install --editable git+https://github.com/TNTMaster370/scrivid.git#egg=scrivid
+          git clone https://github.com/your_username/your_repository.git
+          cd your_repository
+          pip install -e .
       - name: Run Python Script
         run: python -m tests/samples/notatruetest.py
       - name: Archive Directory
