--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,9 +43,7 @@ jobs:
       - name: Download Scrivid
         run: 
           python -m pip install --upgrade pip
-          git clone https://github.com/TNTMaster370/scrivid.git
-          cd your_repository
-          pip install -e .
+          pip install --editable git+https://github.com/TNTMaster370/scrivid.git#egg=scrivid --user
       - name: Run Python Script
         run: python -m tests/samples/notatruetest.py
       - name: Archive Directory
