Added Python 3.12 to unit tests (#4);

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 4.0.0
-envlist = py38, py39, py310, py311, flake8
+envlist = py38, py39, py310, py311, py312, flake8
 isolated_build = true
 
 [gh-actions]
@@ -9,6 +9,7 @@ python =
     3.9: py39
     3.10: py310
     3.11: py311
+    3.12: py312
 
 [testenv]
 setenv =
@@ -23,6 +24,6 @@ basepython = python3.8
 deps = flake8
 commands = flake8 scrivid tests
 
-[testenv:py311]
+[testenv:py312]
 commands = 
     pytest --basetemp={envtmpdir}
