--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,9 @@ jobs:
           pip install tox tox-gh-actions
       - name: Install ffmpeg (ubuntu)
         if: matrix.os == 'ubuntu-latest'
-        run: sudo apt-get install ffmpeg
+        run: 
+          sudo apt update
+          sudo apt-get install ffmpeg
       - name: Install ffmpeg (windows)
         if: matrix.os == 'windows-latest'
         run: choco install ffmpeg --version=5.1.1 --elevated
