--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,11 +22,12 @@ jobs:
         run:
           python -m pip install --upgrade pip
           pip install tox tox-gh-actions
+      - name: Update `sudo` (ubuntu)
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt update
       - name: Install ffmpeg (ubuntu)
         if: matrix.os == 'ubuntu-latest'
-        run: 
-          sudo apt update
-          sudo apt-get install ffmpeg
+        run: sudo apt-get install ffmpeg
       - name: Install ffmpeg (windows)
         if: matrix.os == 'windows-latest'
         run: choco install ffmpeg --version=5.1.1 --elevated
