Updated `setup.cfg` information;

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = scrivid
 version = 0.2.0
 description = A Python library to create instructions for a generated video.
-author = TNTMaster370
+author = Trystyn Coté
 license = MIT
 license_file = LICENSE.md
 platforms = win32
@@ -13,10 +13,12 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
 
 [options]
 packages = scrivid
 install_requires =
+    attrs>=23.1.0
     Pillow>=9.3
     ffmpeg-python>=0.2.0
     sortedcontainers>2
