Added additional classifiers to `setup.cfg`;

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,12 @@ license = MIT
 license_file = LICENSE.md
 platforms = win32
 classifiers =
+    Development Status :: 3 - Alpha
+    Intended Audience :: Other Audience
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+    Natural Language :: English
+    Operating System :: Microsoft :: Windows
+    Operating System :: POSIX :: Linux
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.8
@@ -14,6 +20,7 @@ classifiers =
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
     Programming Language :: Python :: 3.12
+    Topic :: Multimedia :: Graphics :: Editors :: Raster-Based
 
 [options]
 packages = scrivid
