Updated pytest commands to use the verbose flag;

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ setenv =
 deps =
     -r{toxinidir}/requirements_dev.txt
 commands =
-    pytest --basetemp={envtmpdir} --skip-video-tests
+    pytest --basetemp={envtmpdir} --skip-video-tests -vv
 
 [testenv:flake8]
 basepython = python3.8
@@ -26,4 +26,4 @@ commands = flake8 scrivid tests
 
 [testenv:py312]
 commands = 
-    pytest --basetemp={envtmpdir}
+    pytest --basetemp={envtmpdir} -vv
