--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,11 @@ build-backend = "setuptools.build_meta"
 [tool.pytest.ini_options]
 addopts = "--showlocals"
 faulthandler_timeout = 120
-markers = "flag_video"
+markers = [
+    "motion_tree",
+    "qualms",
+    "video",
+]
 testpaths = [
     "tests",
 ]
