--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ setenv =
 deps =
     -r{toxinidir}/requirements_dev.txt
 commands =
-    pytest --basetemp={envtmpdir} --skip-video-tests -vv
+    pytest --basetemp={envtmpdir} -vv --skip video
 
 [testenv:flake8]
 basepython = python3.8
