Implemented the versioning information in terms of `__version__`;

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,9 @@
 [metadata]
 name = scrivid
-version = 0.2.0
+version = attr: scrivid._version.__version__  # Instantiating it as
+# `scrivid.__version__` results in so many shaky imports from the root-level
+# `__init__.py`, that it's just easier to get directly, even though it's
+# "protected".
 description = A Python library to create instructions for a generated video.
 author = Trystyn Coté
 license = MIT
