--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = scrivid
-version = attr: scrivid._version.__version__  # Instantiating it as
-# `scrivid.__version__` results in so many shaky imports from the root-level
-# `__init__.py`, that it's just easier to get directly, even though it's
-# "protected".
+version = attr: scrivid._version.__version__  
+# Instantiating it as `scrivid.__version__` results in so many shaky imports 
+# from the root-level `__init__.py`, that it's just easier to get directly,
+# even though it's "protected".
 description = A Python library to create instructions for a generated video.
 author = Trystyn Coté
 license = MIT
