--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,3 +39,23 @@ jobs:
       #   with:
       #     name: extracted-artifact
       #     path: ${{ github.workspace }}/tests/.scrivid-test-cache
+  test-experimental-3130:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.13
+      - name: Install dependencies
+        run:
+          python -m pip install --upgrade pip
+          pip install tox tox-gh-actions
+      - name: Update `sudo`
+        run: sudo apt update
+      - name: Install ffmpeg
+        run: sudo apt-get install ffmpeg
+      - name: Test with tox
+        run: tox
+        continue-on-error: true  
+        # Even if this step fails, the build shouldn't fail, since 3.13 is not yet guaranteed to be stable.
