--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,30 +39,30 @@ jobs:
       #   with:
       #     name: extracted-artifact
       #     path: ${{ github.workspace }}/tests/.scrivid-test-cache
-  test-experimental-3130:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python 3.13
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.13.0-alpha.4
-      - name: Install dependencies
-        run:
-          python -m pip install --upgrade pip
-          pip install tox tox-gh-actions
-      - name: Update `sudo`
-        run: sudo apt update
-      - name: Install ffmpeg
-        run: sudo apt-get install ffmpeg
-      - name: Install `scrivid`
-        run: pip install .
-      - name: Install test dependencies
-        run: pip install -r requirements_dev.txt
-      - name: Run tests
-        run: pytest
-        continue-on-error: true
-        # Even if this step fails, the build shouldn't fail, since 3.13 is not yet guaranteed to be stable.
-      - name: Run flake8
-        run: flake8 scrivid tests
-        continue-on-error: true
+  # test-experimental-3130:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Set up Python 3.13
+  #       uses: actions/setup-python@v4
+  #       with:
+  #         python-version: 3.13.0-alpha.4
+  #     - name: Install dependencies
+  #       run:
+  #         python -m pip install --upgrade pip
+  #         pip install tox tox-gh-actions
+  #     - name: Update `sudo`
+  #       run: sudo apt update
+  #     - name: Install ffmpeg
+  #       run: sudo apt-get install ffmpeg
+  #     - name: Install `scrivid`
+  #       run: pip install .
+  #     - name: Install test dependencies
+  #       run: pip install -r requirements_dev.txt
+  #     - name: Run tests
+  #       run: pytest
+  #       continue-on-error: true
+  #       # Even if this step fails, the build shouldn't fail, since 3.13 is not yet guaranteed to be stable.
+  #     - name: Run flake8
+  #       run: flake8 scrivid tests
+  #       continue-on-error: true
